--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    I made this    No me :)    Will I break before I bend?
+		    If I bend then I might not break...
 	    </footer>
 	</body>
 </html>
