Updated index.html again

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    If I bend then I might not break...
+		    Will I break before I bend?
 	    </footer>
 	</body>
 </html>
