--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Will I break before I bend?
+		    Click to redraw | Will I break before I bend?
 	    </footer>
 	</body>
 </html>
