--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Broccoli</title>
+		<title>Doodle</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>FractalBroccoli</h1>
+			<h1>FractalDoodle</h1>
 		</header>
 			<section id="content">
 				<canvas id="FractalTree" data-processing-sources="FractalTree.pde">
